package eapli.aisafe.flightplan.domain;

public enum FlightPlanStatus {
    DRAFT,
    IN_TEST,
    TEST_PASSED,
    TEST_FAILED
}
