@startuml weatherData_aggregate
left to right direction
skinparam packageStyle rectangle
skinparam nodesep 40
skinparam ranksep 60
hide empty members

package "AirControlArea_Aggregate" <<aggregate>> {
  class AirControlArea <<entity>> <<root>> {
    maxAltitudeMetres : int
  }
  class AreaCode <<value object>> {
    code : String
  }
  note right of AreaCode : unique in system (US050)
  class BoundingBox <<value object>> {
    minLat : double
    maxLat : double
    minLon : double
    maxLon : double
  }
  note right of BoundingBox : Rectangle boundary.\nInvariant: minLat < maxLat, minLon < maxLon

  AirControlArea *---- AreaCode : identifiedBy
  AirControlArea *---- BoundingBox : boundedBy
}


package "Flight_Aggregate" <<aggregate>> {

  class Flight <<entity>> <<root>> {
    scheduledArrivalTime
  }

  class FlightDesignator <<value object>> {
    airlineDesignator
    flightNumber
    operationalSuffix
  }
  note left of FlightDesignator : Format: xxn(n)(n)(n)(a)\nunique (sec. 3.2)

  enum FlightType {
    regular
    charter
  }

  abstract class DepartureSchedule <<value object>> {
  }

  class RegularSchedule <<value object>> {
  }
  class ScheduleEntry <<value object>> {
    dayOfWeek
    departureTime
  }

  class CharterSchedule <<value object>> {
    departureDate
    departureTime
  }

  class FlightPlan <<entity>> {
  }

  enum FlightPlanStatus {
    draft
    validated
  }

  class FuelQuantity <<value object>> {
    value
    unit
  }
  note right of FuelQuantity : must be positive (US080)

  Flight *-- FlightDesignator : identifiedBy
  Flight ---> FlightType : ofType
  Flight *--- DepartureSchedule : scheduledAt
  DepartureSchedule <|-- RegularSchedule
  DepartureSchedule <|-- CharterSchedule
  RegularSchedule *- "1..*" ScheduleEntry : composedOf
  Flight *--- "1..*" FlightPlan : hasPlan
  FlightPlan --> FlightPlanStatus : hasStatus
  FlightPlan *-- FuelQuantity : carries

}

package "WeatherData_Aggregate" <<aggregate>> {
  class WeatherData <<entity>> <<root>> {
    temperatureCelsius : double
    validFrom : LocalDateTime
    validTo : LocalDateTime
  }
  note right of WeatherData : US042: "data might be from\nmultiple external providers".\nClient: uses validFrom/validTo pair.\nIdentity: auto-generated Long.
  class WindCondition <<value object>> {
    directionDegrees : int
    speedKnots : double
  }
  note right of WindCondition : directionDegrees ∈ [0,360)
  class WeatherSubArea <<value object>> {
    minLat : double
    maxLat : double
    minLon : double
    maxLon : double
  }
  note right of WeatherSubArea : Sub-rectangle inside the ACA.\n"weather not same everywhere in area"
  WeatherData *-- WindCondition : records
  WeatherData *-- WeatherSubArea : coversSubArea
}

Flight "*" ---> "0..1" WeatherData : usesWeather >
note on link : US082: weather added\nto flight plan.\nRises to root — FlightPlan\nis internal entity.

package "Simulation_Aggregate" <<aggregate>> {
  class Simulation <<entity>> <<root>> {
    id : Long
  }
  class SimulationTimeRange <<value object>> {
    startDateTime : LocalDateTime
    endDateTime : LocalDateTime
  }
  note right of SimulationTimeRange : Invariant: start < end
  class SafetyThreshold <<value object>> {
    value : double
    unit : String
  }
  class SimulationReport <<value object>> {
    filePath : String
    content : String
  }
  note right of SimulationReport : SCOMP output file stored verbatim.\nImmutable.
  enum ValidationResult {
    PASSED
    FAILED
    PENDING
  }

  Simulation *-- SimulationTimeRange : scheduledFor
  Simulation *-- SafetyThreshold : boundedBy
  Simulation *-- SimulationReport : produces
  Simulation --> ValidationResult : concludes
}

WeatherData "*" ---> "1" AirControlArea : registeredFor >

Simulation "*" --> "*" WeatherData : uses >

@enduml
